--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,7 @@
+# Follow the quick tutorial here:
+#     https://www.mkdocs.org/getting-started/#creating-a-new-project
+
+# This is the name displayed name on the header
 site_name: CS Handbook - Isaac Yauk
 
 # This item is the nav bar along the top of the page.
@@ -5,5 +9,6 @@ nav:
   - Home: index.md
   - About: about.md
 
-# This is the theme the site uses.
-theme: dracula
+# This is the theme the site uses. Find more here: https://github.com/mkdocs/catalog#-theming
+# Here are my favorites: "material" (this one is clean and simple/standard) and "dracula" (this one is easy on the eyes)
+theme: material
