--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - Home: index.md
   - Docker: docker.md
   - GraphQL: graphql.md
+  - Django: django.md
 
 # This is the theme the site uses. Find more here: https://github.com/mkdocs/catalog#-theming
 # Here are my favorites: "material" (this one is clean and simple/standard) and "dracula" (this one is easy on the eyes)
